Add mustache.js for message templates

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,30 @@
     <div class="chat__main">
       <ol id="messages" class="chat__messages"></ol>
       <div class="chat__footer">
+        <script id="message-template" type="text/template">
+          <li class="message">
+            <div class="message__title">
+              <h4>{{from}}</h4>
+              <span>{{createdAt}}</span>
+            </div>
+            <div class="message__body">
+              <p>{{text}}</p>
+            </div>
+          </li>
+        </script>
+        <script id="location-message-template" type="text/template">
+          <li class="message">
+            <div class="message__title">
+              <h4>{{from}}</h4>
+              <span>{{createdAt}}</span>
+            </div>
+            <div class="message__body">
+              <p>
+                <a href={{url}} target="_blank">My current location</a>
+              </p>
+            </div>
+          </li>
+        </script>
         <form id="message-form">
           <input
             name="message"
@@ -29,6 +53,7 @@
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/libs/jquery-3.5.0.min.js"></script>
     <script src="/js/libs/moment.js"></script>
+    <script src="/js/libs/mustache.js"></script>
     <script src="/js/index.js"></script>
   </body>
 </html>
